--- a/package.json
+++ b/package.json
@@ -7,9 +7,20 @@
     "windowsDebug": "@powershell -Command $env:DEBUG='*';node ./bin/www"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
+    "axios": "^1.4.0",
     "debug": "^4.3.4",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
-    "morgan": "^1.10.0"
+    "install": "^0.13.0",
+    "morgan": "^1.10.0",
+    "npm": "^9.7.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.32.1"
   }
 }
