--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "appointments-server",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./src/bin/www",
     "windowsDebug": "@powershell -Command $env:DEBUG='*';node ./bin/www"
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^2.30.0",
     "debug": "^4.3.4",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
-    "install": "^0.13.0",
     "morgan": "^1.10.0",
     "npm": "^9.7.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.1",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.32.1"
+    "pg-hstore": "^2.3.4"
   }
 }
